# goit_python_web_hw_07

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run.sh
doc/config-example/: config.ini
migrations/: env.py
migrations/versions/: 1cc5e872d141_.py  5639e675f51f_init.py  7686b2d4943e_.py  8d92a3f52d9a_.py  9457078b93ed_init.py  e12f79fb1287_.py
scripts/: docker_build_docker-compose.cmd  docker_build_image.cmd  docker_load.cmd  docker_run.cmd  docker_run_db.cmd  docker_run_hw07.cmd  docker_stop.cmd  sql_upgrade.cmd
seed/: teachers.py
src/: crud.py  db.py  main.py  models.py  parse_args.py  tasks.py
src/database/: db.py  models.py
src/seed/: disciplines.py  grades.py  groups.py  seed.py  students.py  teachers.py
